# autonexa

./: .gitignore  .gitmodules  10may.md  11_05.md  ADVANCED_ARUCO_NAVIGATION_README.md  ARUCO_NAVIGATION_README.md  CLAUDE.md  CUSTOM_NAVIGATION_SETUP.md  README.md  TEST.md  aruco.py  demo.md  navigation.py
.agents/workflows/: full-navigation-test.md
.claude/: settings.local.json
.claude/docs/: architectural_patterns.md
aruco_project/: ARCHITECTURE_RECOMMENDATIONS.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  ROS2_SENSOR_FUSION_TEMPLATE.md  VISUAL_SUMMARY.md  aruco.py  aruco_server.py  aruco_server_enhanced.py
aruco_project/mobile_app/: .flutter-plugins-dependencies  .gitignore  README.md  REDESIGN_NOTES.md  build_log.txt  pubspec.yaml
aruco_project/mobile_app/lib/: control_tab.dart  joystick_widget.dart  lidar_map_view.dart  main.dart  map_overlay.dart  pico_udp_service.dart
aruco_project/mobile_app/linux/: CMakeLists.txt
aruco_project/mobile_app/test/: widget_test.dart
aruco_project/mobile_app/web/: index.html  manifest.json
aruco_project/mobile_app/windows/: CMakeLists.txt
aruco_project/pico_firmware/: UPLOAD_GUIDE.md  ackermann.py  config.py  main.py  motor.py  servo.py  wifi_manager.py
docs/: AutoNexa_CDRR_Final.tex  AutoNexa_Critical_Design_Review_Report_2026-03-24.md  AutoNexa_Critical_Design_Review_Report_2026-03-29.tex  AutoNexa_Final_Report.tex  AutoNexa_Final_Report_Template.tex  IMPLEMENTATION_STATUS_AND_REMAINING_PLAN_2026-03-14.md  MICROPYTHON_MOBILE_APP_TEST_GUIDE_2026-03-29.md  PICO_W_DIRECT_WIFI_CONTROL_GUIDE_2026-03-29.md  autonexa CDRR notion.txt  cdrr_perception_navigation.md  control_subsystem_test_dashboard.html  control_subsystem_test_protocol.md  debug_session_2026_04_26.md  generate_cdrr_pdf.py  in_app_tuning_guide.md  llm_config.example.json  parking_plan.md  pico_control_test_guide.md  rpi5_pico_dual_team_implementation_plan.md  subsystem_test_data_dashboard.html  subsystem_test_plan.md  system_architecture_block_diagrams.tex
maps/: 1312map.pgm  1312map.yaml  1712.pgm  1712.yaml  2112map.pgm  2112map.yaml  2412map.pgm  2412map.yaml  3012map.pgm  3012map.yaml  deneme.pgm  deneme.yaml  deneme_roads.pgm  deneme_roads.yaml  deneme_roads_original.pgm  emre.pgm  emre.yaml  emre_roads.pgm  emre_roads.yaml  emre_roads_original.pgm  maplast.pgm  maplast.yaml  mapppp.pgm  mapppp.yaml  mapppp_roads.pgm  mapppp_roads.yaml  mapppp_roads_original.pgm  my_map.pgm  my_map.yaml  new_map.pgm  new_map.yaml  parking_spots.yaml
pico_firmware/: CMakeLists.txt  pico_sdk_import.cmake
pico_firmware/include/: ackermann.h  config.h  encoder.h  hiwonder_driver.h  l298n_driver.h  motor_control.h  safety.h  servo.h  uros_transport.h
pico_firmware/src/: ackermann.c  encoder.c  hiwonder_driver.c  l298n_driver.c  main.c  motor_control.c  safety.c  servo.c  uros_time_shim.c  uros_transport.c
pico_firmware/test/: encoder_test.c
pico_firmware/tools/: pid_tuner.py  servo_calibration.py
src/parking_system/: CMakeLists.txt  package.xml
src/parking_system/config/: amcl_global_localization.yaml  amcl_params.yaml  amcl_small_scale.yaml  bt_navigate_to_pose_ackermann.xml  controller_mppi.yaml  ekf.yaml  ekf_2d_no_imu.yaml  laser_scan_matcher.yaml  nav2_navigation_params.yaml  nav2_params.yaml  parking_spots_static.yaml  scan_filter.yaml  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml  slam_toolbox_mapping_with_odom.yaml
src/parking_system/launch/: amcl_localization.launch.py  ekf_fusion.launch.py  fresh_mapping.launch.py  lidar_visualization.launch.py  localization.launch.py  localization_launch.py  mapping.launch.py  mapping_with_laser_odom.launch.py  nav2_amcl_navigation.launch.py  nav2_live_slam.launch.py  nav2_only.launch.py  nav2_pico_serial.launch.py  navigation.launch.py  parking_navigation.launch.py  robot_description_launch.py  rpi5_pico_bridge.launch.py  simple_nav2.launch.py  simple_navigation.launch.py  visualization.launch.py
src/parking_system/rviz/: localization.rviz  mapping.rviz  navigation.rviz  visualization.rviz
src/parking_system/scripts/: __init__.py  aruco_server_enhanced.py  build_urdf.py  cmd_vel_to_pico_bridge.py  custom_navigation_gui.py  diagnose_control_chain.py  diagnose_localization.py  diagnose_scan_quality.py  diagnose_tf_tree.py  fake_odom.py  initial_pose_publisher.py  localization_initializer.py  map_bootstrap.py  nav2_activator.py  nav2_pico_bridge.py  odom_bootstrap.py  odom_nan_filter.py  pico_joint_feedback_to_odom.py  pico_serial_transceiver.py  print_robot_position.py  record_control_chain_bag.py  road_mask_editor.py  road_mask_publisher.py  ros2_mobile_bridge.py  select_slot.py  simple_nav.py  simple_path_planner.py  slam_initializer.py  spot_navigator.py  spot_recorder.py  temporary_odom_publisher.py  test_parking_slot_selection.py
src/parking_system/scripts/custom_navigation/: README.md  __init__.py  amcl_subscriber.py  map_loader.py  navigation_gui.py  parking_spots.py  path_planner.py
src/parking_system/scripts/parking_system/: __init__.py  aruco_detector.py  aruco_navigation.py  enhanced_sensor_fusion.py  marker_map_manager.py  marker_mapper.py  marker_selector.py  parking_coordinator.py  parking_slot_selector.py  path_analyzer.py  path_monitor.py  sensor_fusion.py
src/parking_system/urdf/: robot.urdf  robot.urdf.xacro
src/parking_system/web_desktop/: .gitattributes  .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
src/parking_system/web_desktop/assets/: NOTICES
test/: README.md  encoder_monitor.py  pc_controller.py  pico_gui.py  pico_motor_servo_test.py
test/pc/: micropython_bridge.py  pc_sender.py
test/pico/: main.py  upload_mobile_bundle.sh  upload_pico_w_wifi_bundle.sh
test/pico/mobile_app_bundle/: README.md  boot.py  main.py
test/pico/pico_w_wifi_bundle/: README.md  boot.py  (+2 more)
test/report/: report_template.md  results_table.csv
test/rpi/: nav2_to_pico_bridge.py
test/scenarios/: scenario_basic.json  scenario_distance.json  scenario_obstacle.json
(+47 files in other folders)
